# RobotLib

./: .gitignore  .travis.yml  AnalogDevice.cpp  AnalogDevice.h  BasicDrive.cpp  BasicDrive.h  CMakeLists.txt  Collection.h  DigitalDevice.cpp  DigitalDevice.h  Encoder.cpp  Encoder.h  LICENSE  Motor.cpp  Motor.h  MotorController.cpp  MotorController.h  PIDController.cpp  PIDController.h  README.md  RobotLib.h  StepperMotor.cpp  build-avr.sh  build.sh  install-deps.sh  keywords.txt  library.properties  travis.sh  verify-keywords  verify-keywords.sh
.github/: FUNDING.yml
.github/workflows/: robotlib.yml
Test/DrivetrainTest/: BasicDrive.cpp  BasicDrive.h  DrivetrainTest.ino  Encoder.cpp  Encoder.h  MotorController.cpp  MotorController.h
arduino/: Arduino.cpp  Arduino.h  CMakeLists.txt
catchlib/: CMakeLists.txt
examples/Motor_Basic/: Motor_Basic.ino
examples/Quadrature_Encoder_Basic/: Quadrature_Encoder_Basic.ino
src/: BasicDrive.cpp  BusInOut.cpp  BusInOut.h  CMakeLists.txt  Collection.h  DigitalDevice.cpp  Encoder.cpp  Encoder.h  HallEffectEncoder.cpp  HallEffectEncoder.h  IMU_BNO055.cpp  IMU_BNO055.h  Motor.cpp  Motor.h  PID.h  PIDController.cpp  PIDController.h  PIDMotorController.h  QuadratureEncoder.cpp  QuadratureEncoder.h  RobotLib.h  RobotLibUtil.h  StepperMotor.cpp  StepperMotor.h  TrackingLoop.cpp  TrackingLoop.h
src/motors/: MotorController.h  Talon.h
tests/: CMakeLists.txt  README.md  opencv_deps.sh  test_businout.cpp  test_hall_encoder.cpp  test_motor.cpp  test_pid.cpp  test_quadrature_encoder.cpp  test_stepper_motor.cpp  test_tracking_loop.cpp  test_utils.cpp  util_tests.cpp
